# fakeuname

./: CMakeLists.txt  README.md  fakeuname.in  fakeuname.spec
src/: CMakeLists.txt  Makefile  fakeuname.c
